--- a/templates/complexe/index.html.twig
+++ b/templates/complexe/index.html.twig
@@ -8,6 +8,6 @@
 <div>
 <h1>{{ page.title }}</h1>
 <p>{{ page.content }}</p>
-<img src="{{ asset('images/pages/'~ page.imageName )  }}" alt="{{ page.title }}" class="w-50">
+<img src="{{ asset('images/page/'~ page.imageName )  }}" alt="{{ page.title }}" class="w-50">
 </div>
 {% endblock %}
