--- a/templates/page/index.html.twig
+++ b/templates/page/index.html.twig
@@ -12,8 +12,8 @@
                 <th>Title</th>
                 <th>Content</th>
                 <th>ImageName</th>
-                <th>UpdatedAt</th>
-                <th>actions</th>
+                {# <th>UpdatedAt</th>
+                <th>actions</th> #}
             </tr>
         </thead>
         <tbody>
