--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
     <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -19,23 +19,29 @@
   <div class="collapse navbar-collapse" id="navbarColor02">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Accueil<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{{ url("complexe") }}">Accueil<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Restaurant</a>
+        <a class="nav-link" href="{{ url("complexe", {slug:"restaurant"}) }}">Restaurant</a>
+        {# <a class="dropdown-item" href="{{ path('restaurant_index') }}">Listing</a>
+        <a class="dropdown-item" href="{{ path('restaurant_new') }}">New</a> #}
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Laser Game</a>
+        <a class="nav-link" href="{{ url("complexe", {slug:"laser-game"}) }}">Laser Game</a>
+        {# <a class="dropdown-item" href="{{ path('lasergame_index') }}">Listing</a>
+        <a class="dropdown-item" href="{{ path('lasergame_new') }}">New</a> #}
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Réalité Virtuelle</a>
+        <a class="nav-link" href="{{ url("complexe", {slug:"realite-virtuelle"}) }}">Réalité Virtuelle</a>
+        {# <a class="dropdown-item" href="{{ path('realitevirtuelle_index') }}">Listing</a>
+        <a class="dropdown-item" href="{{ path('realitevirtuelle_new') }}">New</a> #}
       </li>
     </ul>
   </div>
 </nav>
-
+<div class="container">
         {% block body %}{% endblock %}
-
+</div>
          <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
