--- a/templates/realitevirtuelle/realitevirtuelle.html.twig
+++ b/templates/realitevirtuelle/realitevirtuelle.html.twig
@@ -3,21 +3,36 @@
 {% block title %}Réalité Virtuelle{% endblock %}
 
 {% block body %}
-<main>
+<main class="vrpage">
     <div class="project-bg bg-danger">
-        <div class="pt-5 pb-5 articles-about">
-            <article class="container m-auto pb-1 pt-1 mt-2 mb-2 w-25">
-                <h2 class="text-left pt-2 pb-2 mt-2 mb-2 text-light">Réalité Virtuelle</h2>
-                <p class="left text-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                    eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <div class="pt-5 pb-5 articles-about container">
+             <h2 class="text-left pt-2 pb-2 mt-2 mb-2 text-light">Réalité Virtuelle</h2>
+            <article class="m-auto pb-1 pt-1 mt-2 mb-2 col-12 row">
+               
+                <img src="/img/Virtual_Reality.jpg" alt="réalité virtuelle" class="col-6 shadow">
+                <p class="left text-light col-6">Vous vivrez une expérience hors du commun dans un centre de réalité
+                    virtuelle. Découvrez une atmosphère unique, accueillante et chaleureuse !
+                    Situé à 10min d'Aix-en-Provence, Virtual Arena c’est un ensemble de 4 espaces VR. Vous pouvez venir
+                    seul ou en groupe, le temps de 30min ou d’une soirée. Choisissez entre l’une de nos 3 grandes
+                    formules: arcade, jeux de tirs, ou Escape Game. En fonction de la formule choisie, vous basculerez
+                    sur l’un de nos différents espaces de jeu.
                 </p>
                 <br>
             </article>
-        </div>   
+        </div>
+        <div class="pt-5 pb-5 articles-about container">
+            <h2 class="text-left pt-2 pb-2 mt-2 mb-2 text-light">Espace VR</h2>
+            <article class="m-auto pb-1 pt-1 mt-2 mb-2 col-12 row">
+                
+                <p class="left text-light col-6">Dans notre espace VR vous serez en totale immersion dans un monde virtuelle grâce a nos casque VR et notre espace adapté. Un espace de ...m² pensé pour accueillir un groupe de 4 personnes en simultanés. 
+                </p>
+                <br>
+                <img src="/img/sallevr.jpg" alt="salle réalité virtuelle" class="col-6 shadow">
+            </article>
+        </div>
+        <div class="text-center">
+            <a href="" class="btn btn-outline-info"> Nos jeux VR <i class="far fa-arrow-right"></i></a>
+        </div>
     </div>
 </main>
 {% endblock %}
