--- a/templates/realitevirtuelle/vueCategoryVirtual.html.twig
+++ b/templates/realitevirtuelle/vueCategoryVirtual.html.twig
@@ -4,10 +4,10 @@
 
 {% block body %}
 <main>
-    <div class="project-bg bg-danger">
+    <div class="project-bg bg-danger mt-5">
         <div class="text-center pt-5 pb-5 articles-about">
             {% for jeu in jeux %}
-            <a href="{{ url('jeuVR',{id:jeu.category.id}) }}" class="mt-5">{{ jeu.category.nom }}</a>
+            <a href="{{ url('jeuVR',{id:jeu.category.id}) }}" class="mt-5 text-white">{{ jeu.category.nom }}</a>
             {% endfor %}
         </div>   
     </div>
