--- a/templates/realitevirtuelle/vueJeuVirtual.html.twig
+++ b/templates/realitevirtuelle/vueJeuVirtual.html.twig
@@ -3,10 +3,10 @@
 
 {% block body %}
 <h2> {{ category.nom }} </h2>
-  <div class="row pt-3">
+  <div class="project-bg row mt-4">
     {% for jeu in jeux %}
-        <div class="col-3">
-            <div class="card mb-3 {% if loop.first %}text-white bg-secondary{% endif %}">
+        <div class="col-4 text-center mt-5 mx-auto">
+            <div class="card mb-3 {% if loop.first %} bg-secondary{% endif %}">
                 <h3 class="card-header">{{ jeu.nom }}</h3>
                 <div class="card-body">
                     <h5 class="card-title"> {{ jeu.category.nom }}</h5>
