Page Restau / Retouche Footer

--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,24 +1,23 @@
-<footer class="bg-primary text-center text-white p-4 d-flex flex-row">
-<div class="container-fluid">
-    <div class="row col-12">
-        <div id="contact" class="pt-1 pb-1 bg-primary col-12 col-md-12">
+<footer class="footer-resto text-center text-white d-flex flex-row">
+<div class="container-fluid footer-filtre-resto d-flex align-items-center justify-content-center">
+    <div class="row col-sm-12 col-md-8 col-lg-8 col-xl-8">
+        <div id="contact" class="py-1 col-sm-12 col-md-12 col-lg-12 col-xl-6">
             {% include 'partials/contactForm.html.twig' %}
         </div>
-        <div class="col-12 col-md-12">
-            <h2 class="text-center text-light mb-2">Ou nous trouver</h2>
-            <iframe class="border rounded shadow" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2886.619465273774!2d5.576597915777465!3d43.656084960261616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ca281e3f12e12f%3A0x138f62ed1f56f3fd!2s1%20Chemin%20des%20Trois%20Francs%2C%2013860%20Peyrolles-en-Provence!5e0!3m2!1sfr!2sfr!4v1584714342461!5m2!1sfr!2sfr" width="200" height="150" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        
+        <div class="pt-1 pb-5 col-sm-12 col-md-12 col-lg-12 col-xl-6">
+            <h2 class="text-center text-light mb-2">Nous trouver</h2>
+            <hr>
+            <iframe class="border rounded shadow" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2886.619465273774!2d5.576597915777465!3d43.656084960261616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ca281e3f12e12f%3A0x138f62ed1f56f3fd!2s1%20Chemin%20des%20Trois%20Francs%2C%2013860%20Peyrolles-en-Provence!5e0!3m2!1sfr!2sfr!4v1584714342461!5m2!1sfr!2sfr" width="100%" height="65%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             <p>Cliquez en dessous pour appeler le 07 11 22 33 44</p>
-            <a href="tel:+33711223344" class="text-light"><button type="submit" name="submit" value="Appeler" class="btn btn-success">Appeler</button></a>
+            <a href="tel:+33711223344" class="text-light pb-5"><button type="submit" name="submit" value="Appeler" class="btn btn-success rounded">Appeler</button></a>
         </div>
-    </div>
-
-
-    <div class="p-2">
-        <p>© Copyright 2020 Laetitia, Nagib, Eddy, Younes</p>
-        <p> <a href="#"><i class="fas fa-arrow-up iconb text-white float-right"></i></a>
-            {# <a href="https://github.com/Amar2050" target="_blank"><i class="fab fa-github p-3 iconb text-white"></i></a>
-            <a href="https://www.linkedin.com/in/amar-boutayeb-920369177/" target="_blank"><iclass="fab fa-linkedin p-3 iconb text-white"></i></a> #}   
-        </p>
-    </div>
+        <div class="p-5 mx-auto my-auto">
+            <p>© Copyright 2020 Laetitia, Nagib, Eddy, Younes</p>
+            <a href="https://www.facebook.com/ARONALEA/" target="_blank"><i class="fab fa-facebook-square text-white fa-3x"></i></a>
+            <a href="https://www.facebook.com/ARONALEA/" target="_blank"><i class="fab fa-instagram-square text-white fa-3x"></i></a> 
+        </div>
+    </div>      
 </div>
+<p class="d-flex align-items-end justify-content-center"><a href="#"><i class="fas fa-arrow-up iconb text-white"></i></a></p>
 </footer>
