--- a/templates/lasergame/lasergame.html.twig
+++ b/templates/lasergame/lasergame.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <main>
-    <div class="project-bg bg-danger">
+    <div>
         <div class="pt-5 pb-5 articles-about">
             <article class="container m-auto pb-1 pt-1 mt-2 mb-2 w-25">
                 <h2 class="text-left pt-2 pb-2 mt-2 mb-2 text-light">Laser Game</h2>
