--- a/templates/realitevirtuelle/realitevirtuelle.html.twig
+++ b/templates/realitevirtuelle/realitevirtuelle.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Réalité Virtuelle{% endblock %}
 
 {% block body %}
-<main class="vrpage project-bg mt-5">
+<main class="vrpage">
         <div class="pt-5 pb-5 articles-about container">
              <h2 class="text-center pt-2 pb-2 mt-2 mb-2 text-light">Réalité Virtuelle</h2>
             <article class="m-auto pb-1 pt-1 mt-2 mb-2 col-12 row">
@@ -30,7 +30,7 @@
             </article>
         </div>
         <div class="text-center">
-            <a href="{{ path('categoryVR') }}" class="btn btn-outline-info"> Nos jeux VR <i class="far fa-arrow-right"></i></a>
+            <a href="{{ path('allcategoryVR') }}" class="btn btn-outline-info"> Nos jeux VR <i class="far fa-arrow-right"></i></a>
         </div>
     </div>
 </main>
