--- a/templates/restaurant/restaurant.html.twig
+++ b/templates/restaurant/restaurant.html.twig
@@ -4,11 +4,12 @@
 
 {% block body %}
 <main>
-    <div class="project-bg bg-danger">
+    <div>
         <div class="pt-5 pb-5 articles-about">
-            <img src="../../public/img/sallerestaurant.jpg" alt="restaurant">
+            <h2 class="text-center pt-2 pb-2 mt-2 mb-2 text-light">Restaurant</h2>
+            <img src="{{ asset('img/sallerestaurant.jpg') }}" alt="restaurant" class="img-fluid mx-auto mt-3">
             <article class="container m-auto pb-1 pt-1 mt-2 mb-2 w-25">
-                <h2 class="text-left pt-2 pb-2 mt-2 mb-2 text-light">Restaurant</h2>
+
                 <p class="left text-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                     eiusmod tempor
                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
