--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,7 +13,7 @@ html {
 
 .project-bg {
     /* Photo by Ron Whitaker on Unsplash */
-	background-image: url("../img/bgwood.jpg");
+	background-image: url("../img/fondsombre.jpg");
 	background-position: center;
 	background-size: cover;
 	background-attachment: fixed;
@@ -55,6 +55,17 @@ strong{
 .vrpage{
 	font-family: 'Aldrich', sans-serif;
 }
-.vrpage img{
-	border-radius: 30px;
+.vrpage article{
+	/* background-color:rgba(206, 212, 218, 0.2); */
+	border-radius: 5px;
 }
+.vrpage p{
+	font-size: 1.1em;
+}
+
+.vrpage .parent {
+	display: flex; /* contexte sur le parent */
+  }
+ .vrpage .enfant {
+	margin: auto; /* eh oui, tout bêtement */
+  }
