--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -51,7 +51,7 @@
                 <i class="fas fa-times float-right mr-3 iconb text-danger d-lg-none" onclick="dynamicNav()"></i>
             </div>
         </nav>
-        <div class="project-bg container-fluid">
+        <div class="project-bg">
         {% include 'partials/header.html.twig' %}
         
         {% block body %}{% endblock %}
