--- a/templates/portfolio/homepage.html.twig
+++ b/templates/portfolio/homepage.html.twig
@@ -4,9 +4,9 @@
 
 {% block body %}
 <main onclick="closingNav()">
-    <div id="projects" class="d-flex justify-content-center align-item-center bg-primary">
+    <div id="projects" class=" mt-0 d-flex justify-content-center align-item-center bg-primary">
         <!-- Div border and responsive -->
-        <div class="p-0 col-12 col-sm-12 col-md-12 col-lg-12 col-xl-10 m-auto bg-primary">
+        <div class="p-0 col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 m-auto bg-primary">
             <!-- Carousel Projects picture -->
             <div>
                 <div id="carouselCaptions" class="carousel slide" data-ride="carousel">
