--- a/templates/realitevirtuelle/vueAllCategoryVirtual.html.twig
+++ b/templates/realitevirtuelle/vueAllCategoryVirtual.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <main>
-    <div>
+    <div class="mt-5">
         <h3 class="text-white text-center">Catégories des jeux VR</h3>
         <div class="text-center py-3 articles-about">
             {% for jeu in jeux %}
