--- a/templates/realitevirtuelle/vueVirtual.html.twig
+++ b/templates/realitevirtuelle/vueVirtual.html.twig
@@ -1,11 +1,12 @@
 {% extends 'base.html.twig' %}
 
+
 {% block title %}{{ jeu.nom }} - VR{% endblock %}
 
 {% block body %}
 <main>
     <div class="row col-12 mx-auto text-center text-white">
-        <h1 class=" text-center text-white">ici nom category</h1>
+        <h1 class=" text-center text-white">{{ jeu.category.nom }}</h1>
         <div class="col-12">
             <h3 class="text-white">{{ jeu.nom }}</h3>
             <div class="col-12">
@@ -14,9 +15,11 @@
             <div class="mt-5">
                 <span>{{ jeu.description }}</span>
             </div>
+            
         </div>
-        <a href="">back to list</a>
+        <a href="{{ url('categoryVR',{id:jeu.category.id}) }}">back to list</a>
     </div>
+
 </main>
 
 
