--- a/templates/restaurant/restaurant.html.twig
+++ b/templates/restaurant/restaurant.html.twig
@@ -5,8 +5,7 @@
 {% block body %}
 <main>
     <div>
-        <div></div>
-        <div class="pt-5 pb-5 articles-about">
+        <div class="">
             <h2 class="text-center pt-2 pb-2 mt-2 mb-2 text-light">Restaurant</h2>
             <img src="{{ asset('img/sallerestaurant.jpg') }}" alt="restaurant" class="img-fluid mx-auto mt-3">
             <article class="container m-auto pb-1 pt-1 mt-2 mb-2 w-25">
