--- a/templates/restaurant/restaurant.html.twig
+++ b/templates/restaurant/restaurant.html.twig
@@ -3,70 +3,27 @@
 {% block title %}Restaurant{% endblock %}
 
 {% block body %}
-<main id="typo-resto">
-    <div class="maindiv-resto sdw bg-primary">
-        <div class="header-resto d-flex align-items-center justify-content-center">
-            <div class=" mx-auto w-100">
-                <h2 class="text-white text-center bg-title-resto p-4">Jungle Bar <br> ~ <br> 13860 Peyrolles-en-Provence <br> ~ <br> 1 Route de la Durance</h2>
-            </div>
-        </div>
+<main>
+    <div>
+        <div class="">
+            <h2 class="text-center pt-2 pb-2 mt-2 mb-2 text-light">Restaurant</h2>
+            <img src="{{ asset('img/sallerestaurant.jpg') }}" alt="restaurant" class="img-fluid mx-auto mt-3">
+            <article class="container m-auto pb-1 pt-1 mt-2 mb-2 w-25">
 
-        <div class="body-resto text bg-primary pb-5 container-fluid">
-            <div class="bg-primary  pt-5 row">                                                                              
-                <div class="card text-white mb-3 col-9 mx-auto">
-                    <div class="card-body col-12 ">
-                        <article class="m-auto col-12 row"> 
-                            <div class="col-sm-10 col-md-10 col-lg-6 col-xl-5 mx-auto my-auto">                         
-                                <img src="{{ asset('img/salle2.png') }}" alt="restaurant" class=" img-fluid rounded border border-primary">
-                            </div>
-                            
-                            <div class="col-sm-10 col-md-10 col-lg-6 col-xl-7 mx-auto">                            
-                                <h4 class="card-title text-center pb-sm-1 pb-md-1 pt-sm-2 pt-md-2">Bienvenue au Jungle Bar</h4>
-                                <hr>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                    eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                    ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                                    <br>
-                                    <br>
-                                    Duis aute irure dolor in reprehenderit in
-                                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                    <br>
-                                    <br>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                    eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                                    ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                                </p>
-                            </div>
-                        </article>
-                    </div>             
-                </div>
+                <p class="left text-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+                <br>
+            </article>
+        </div>      
+            <div>
+                <button type="submit" name="submit" value="Valider" class="btn btn-info"> Nos menus ici </Button>
             </div> 
-
-            <div class="bg-primary text-right col-12 p-5">
-                <a href="" class="btn text-white bibo mr-5 rounded">CARTE & MENUS</a>
-            </div>            
-        </div>
-
-        <div class="text-white text-center mt-2 pt-3 pb-3 bibo">
-            <h2 class="text-white">Horaires du Jungle Bar</h2>
-            <hr>
-            <p>Lundi -> Fermé</p>
-            
-            <p>Mardi -> Fermé</p>
-            
-            <p>Mercredi -> 11:45 - 14:00  /  18:30 - 21:30</p>
-            
-            <p>Jeudi -> 11:45 - 14:00  /  18:30 - 21:30</p>
-            
-            <p>Vendredi -> 11:45 - 14:00  /  18:30 - 21:30</p>
-            
-            <p>Samedi -> 18:30 - 21:30</p>
-            
-            <p>Dimanche -> 18:30 - 21:30</p>
-        </div>
     </div>
+
 </main>
 {% endblock %}
