--- a/templates/lasergame/lasergame.html.twig
+++ b/templates/lasergame/lasergame.html.twig
@@ -15,6 +15,7 @@
                     voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
                     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
+                <a class="text-white" href="{{ path('allcategorytarif') }}">Nos prix</a>
                 <br>
             </article>
         </div>   
