Revert "Revert "Merge remote-tracking branch 'origin/Eddy' into Younes""
This reverts commit abb70093df35cd122ae82fa81bd97f8dd3f6cce2.

--- a/templates/restaurant/restaurant.html.twig
+++ b/templates/restaurant/restaurant.html.twig
@@ -23,7 +23,29 @@
             <div>
                 <button type="submit" name="submit" value="Valider" class="btn btn-info"> Nos menus ici </Button>
             </div> 
-    </div>
 
+            <div class="bg-primary text-right col-12 p-5">
+                <a href="" class="btn text-white bibo mr-5 rounded">CARTE & MENUS</a>
+            </div>            
+        </div>
+
+        <div class="text-white text-center mt-2 pt-3 pb-3 bibo">
+            <h2 class="text-white">Horaires du Jungle Bar</h2>
+            <hr>
+            <p>Lundi -> Fermé</p>
+            
+            <p>Mardi -> Fermé</p>
+            
+            <p>Mercredi -> 11:45 - 14:00  /  18:30 - 21:30</p>
+            
+            <p>Jeudi -> 11:45 - 14:00  /  18:30 - 21:30</p>
+            
+            <p>Vendredi -> 11:45 - 14:00  /  18:30 - 21:30</p>
+            
+            <p>Samedi -> 18:30 - 21:30</p>
+            
+            <p>Dimanche -> 18:30 - 21:30</p>
+        </div>
+    </div>
 </main>
 {% endblock %}
