--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -52,7 +52,7 @@
                 <i class="fas fa-times float-right mr-3 iconb text-danger d-lg-none" onclick="dynamicNav()"></i>
             </div>
         </nav>
-        <div class="project-bg">
+        <div>
         {% include 'partials/header.html.twig' %}
         
         {% block body %}{% endblock %}
