ajout bas restau

--- a/templates/portfolio/homepage.html.twig
+++ b/templates/portfolio/homepage.html.twig
@@ -17,7 +17,7 @@
                     </ol>
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
-                            <img src="./img/logoTheComplexe.jpg" class="d-block w-100" alt="bet asset screenshot">
+                            <img href="" src="./img/logoTheComplexe.jpg" class="d-block w-100" alt="bet asset screenshot">
                             <div class="carousel-caption">
                                 <!-- Button trigger modal -->
                                 <a data-toggle="modal" data-target="#betassetModal">
