--- a/templates/partials/footerResto.html.twig
+++ b/templates/partials/footerResto.html.twig
@@ -1,4 +1,4 @@
-<footer class="bg-primary text-center text-white d-flex flex-row">
+<footer class="footer-resto text-center text-white d-flex flex-row">
 <div class="container-fluid footer-filtre-resto d-flex align-items-center justify-content-center">
     <div class="row col-sm-12 col-md-8 col-lg-8 col-xl-8">
         <div id="contact" class="py-1 col-sm-12 col-md-12 col-lg-12 col-xl-6">
