update laser et add vue laser

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,7 +13,7 @@ html {
 
 .project-bg {
     /* Photo by Ron Whitaker on Unsplash */
-	background-image: url("../img/fondsombre.jpg");
+	background-image: url("../img/ron-whitaker.jpg");
 	background-position: center;
 	background-size: cover;
 	background-attachment: fixed;
