--- a/templates/partials/contact.html.twig
+++ b/templates/partials/contact.html.twig
@@ -4,8 +4,8 @@
     <h2 class="text-center mb-5">Contactez-moi</h2>
     <form class="border rounded shadow pb-5 pt-5 col-12 col-sm-10 col-md-7 col-lg-6 col-xl-6 m-auto text-center"
         method="post">
-
-        <label for="name" class="text-danger">Nom *</label>
+        <div>
+                    <label for="name" class="text-danger">Nom *</label>
         <input class="form-control text-center" type="text" id="name" name="name"
             placeholder="Votre prénom et nom de famille" required>
 
@@ -16,6 +16,8 @@
         <label for="subject" class="text-danger p-1">Sujet *</label>
         <input class="form-control text-center p-2" type="text" id="subject" name="subject"
             placeholder="Le sujet de votre message" required>
+        </div>
+
 
         <label for="message" class="text-danger p-1">Message *</label>
         <textarea class="form-control text-center p-2" type="text" id="message" name="message"
