--- a/templates/realitevirtuelle/vueAllCategoryVirtual.html.twig
+++ b/templates/realitevirtuelle/vueAllCategoryVirtual.html.twig
@@ -7,8 +7,8 @@
     <div class="mt-5">
         <h3 class="text-white text-center">Catégories des jeux VR</h3>
         <div class="text-center py-3 articles-about">
-            {% for jeu in jeux %}
-            <a href="{{ url('categoryVR',{id:jeu.category.id}) }}" class="text-white">{{ jeu.category.nom }}</a>
+            {% for category in categories %}
+            <a href="{{ url('categoryVR',{id:category.id}) }}" class="text-white">{{ category.nom }}</a>
             {% endfor %}
         </div>   
     </div>
