--- a/templates/lasergame/vueAllCategoryTarif.html.twig
+++ b/templates/lasergame/vueAllCategoryTarif.html.twig
@@ -7,8 +7,8 @@
     <div class="mt-5">
         <h3 class="text-white text-center">Catégories de nos tarifs Laser game</h3>
         <div class="text-center py-3 articles-about">
-            {% for tarif in tarifs %}
-            <a href="{{ url('categoryVR',{id:tarif.category.id}) }}" class="text-white">{{ tarif.category.nom }}</a>
+            {% for category in categories %}
+            <a href="{{ url('categorytarif',{id:category.id}) }}" class="text-white">{{ category.nom }}</a>
             {% endfor %}
         </div>   
     </div>
