--- a/templates/realitevirtuelle/vueCategoryVirtual.html.twig
+++ b/templates/realitevirtuelle/vueCategoryVirtual.html.twig
@@ -11,16 +11,22 @@
                     <h3 class="card-header">{{ jeu.nom }}</h3>
                     <div class="card-body">
                         <h5 class="card-title"> {{ jeu.category.nom }}</h5>
+                        <img src="{{ asset(jeu.image) }}" alt="{{ jeu.category.nom }}" width="100">
                     </div>
                     <div class="card-body">
                         <a href="{{ url('jeuVR', {id: jeu.id}) }}" class="card-link">En savoir plus &rarr;</a>
                     </div>
                 </div>
             </div>
-            <a class="text-white" href="{{ path('allcategoryVR') }}">Retour à la liste des catégories</a>
-
+            
         {% endfor %}
     </div>
+    <div class="row">
+        <div class="col-3">
+            <a class="text-white" href="{{ path('allcategoryVR') }}">Retour à la liste des catégories</a>
+        </div>
+    </div>
+
 </main>
 
 {% endblock %}
