Page Restau/Laser + Footer Restau/Laser

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -76,7 +76,7 @@ strong{
 .sdw{
 	text-shadow: 2px 2px 3px black; 
 }
-.card, .bibo{
+.restocard, .bibo{
 	background: rgba(255, 183, 0, 0.5);
 }
 
@@ -103,6 +103,67 @@ strong{
 	margin: 0 !important; 
 }
 .arrow-filtre-resto{
+	width: 100%;
+	background: rgba(0, 0, 0, 0.7) ;
+}
+
+/* ////////////// */
+/* CSS LASERGAME */
+/* ////////////// */
+  
+#typo-laser {
+	font-family: 'Roboto Condensed', sans-serif;
+  }
+.maindiv-laser{
+	margin-top: 68px;
+}
+
+.lasertitle{
+	font-size: 100px;
+}
+
+.lasersubtitle{
+	font-size: 30px;
+}
+
+.header-laser{
+	background-image: url("../img/laser4.jpg");
+	background-position: center;
+	background-size: cover;
+	background-attachment: fixed;
+	height:60vh;
+	margin: auto;
+}
+.sdw{
+	text-shadow: 2px 2px 3px black; 
+}
+.lasercard, .bibo2{
+	background: rgba(0, 136, 73, 0.5);
+}
+
+.bg-title-laser{
+	display: block;
+	width: 100%;
+	background: rgba(0, 0, 0, 0.5) ;
+	text-shadow: 5px 5px 6px black; 
+}
+.footer-laser{
+	background-image: url("../img/laser4.jpg");
+	/* background: rgba(0, 0, 0, 0.7) ; */
+	background-position: center;
+	background-size: cover;
+	background-attachment: fixed;
+	margin: auto;
+}
+.footer-filtre-laser{
+	display: block;
+	width: 100%;
+	background: rgba(0, 0, 0, 0.7) ;
+	text-shadow: 5px 5px 6px black;
+	padding: 30px !important; 
+	margin: 0 !important; 
+}
+.arrow-filtre-laser{
 	width: 100%;
 	background: rgba(0, 0, 0, 0.7) ;
 }
