--- a/templates/partials/footerLaser.html.twig
+++ b/templates/partials/footerLaser.html.twig
@@ -1,5 +1,5 @@
-<footer class="footer-resto text-center text-white d-flex flex-row">
-    <div class="container-fluid footer-filtre-resto d-flex align-items-center justify-content-center">
+<footer class="footer-laser text-center text-white d-flex flex-row">
+    <div class="container-fluid footer-filtre-laser d-flex align-items-center justify-content-center">
         <div class="row col-sm-12 col-md-8 col-lg-8 col-xl-8">
             <div id="contact" class="py-1 col-sm-12 col-md-12 col-lg-12 col-xl-6">
                 {% include 'partials/contactForm.html.twig' %}
@@ -20,4 +20,4 @@
         </div>      
     </div>
     <p class="d-flex align-items-end justify-content-center"><a href="#"><i class="fas fa-arrow-up iconb text-white"></i></a></p>
-</footer>
+    </footer>
