--- a/templates/restaurant/restaurant.html.twig
+++ b/templates/restaurant/restaurant.html.twig
@@ -9,7 +9,7 @@
             <div class=" mx-auto w-100 bg-title-laser text-center">
                 <h1 class="lasertitle text-white p-3">Jungle Bar</h1>
                 <h3 class="lasersubtitle text-danger"></h3>
-                <p class="lasersubtitle h3 text-white p-3 font-italic">Seulement gratuit pour Laeti, Nagib, Younes et Eddy</p>
+                <p class="lasersubtitle h3 text-white p-3 font-weight-light">Gratuit seulement pour Laeti, Nagib, Younes et Eddy</p>
             </div>
         </div>
 
