--- a/templates/restaurant/base.html.twig
+++ b/templates/restaurant/base.html.twig
@@ -36,8 +36,7 @@
             <div class="navbar-collapse collapse" id="NavBarHamburger">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" onclick="dynamicNav()" href="{{path('homepage')}}">Accueil <span
-                                class="sr-only">(current)</span></a>
+                        <a class="nav-link" onclick="dynamicNav()" href="{{path('homepage')}}">Accueil <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" onclick="dynamicNav()" href="{{path('restaurant')}}">Restaurant<span class="sr-only">(current)</span></a>
