--- a/templates/realitevirtuelle/realitevirtuelle.html.twig
+++ b/templates/realitevirtuelle/realitevirtuelle.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <main id="typo-vr">
-    <div class="maindiv-vr sdw bg-primary">
+    <div class="sdw bg-primary">
         <div class="header-vr d-flex align-items-center justify-content-center">
             <div class=" mx-auto w-100 bg-title-vr">
                 <h1 class="text-white text-center p-3 vrtitle"> Réalité Virtuelle </h1>
