--- a/public/css/app.css
+++ b/public/css/app.css
@@ -128,6 +128,11 @@ strong{
 
 .header-laser{
 	background-image: url("../img/laser4.jpg");
+	background-position: center;
+	background-size: cover;
+	background-attachment: fixed;
+	height:60vh;
+	margin: auto;
 }
 
 .sdw{
