path / laser / category

--- a/templates/lasergame/lasergame.html.twig
+++ b/templates/lasergame/lasergame.html.twig
@@ -48,7 +48,7 @@
             </div> 
 
             <div class="bg-primary text-right col-12 p-5">
-                <a href="" class="btn text-white bibo2 mr-5 rounded">TARIFS</a>
+                <a href="{{ path('allcategorytarif') }}" class="btn text-white bibo2 mr-5 rounded">TARIFS</a>
             </div>            
         </div>
 
