--- a/templates/lasergame/vueCategoryTarif.html.twig
+++ b/templates/lasergame/vueCategoryTarif.html.twig
@@ -2,7 +2,7 @@
 {% block title %}Catégories des jeux VR - Le Complexe{% endblock %}
 
 {% block body %}
-<main>
+<main class="bg-primary">
     <h2 class="mt-5 text-center text-white"> {{ category.nom }} </h2>
     <div class="row">
         {% for tarif in tarifs %}
