--- a/templates/lasergame/vueAllCategoryTarif.html.twig
+++ b/templates/lasergame/vueAllCategoryTarif.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <main>
-    <div class="mt-5">
+    <div class="mt-5 bg-primary">
         <h3 class="text-white text-center">Catégories de nos tarifs Laser game</h3>
         <div class="text-center py-3 articles-about">
             {% for category in categories %}
