--- a/templates/realitevirtuelle/vueAllCategoryVirtual.html.twig
+++ b/templates/realitevirtuelle/vueAllCategoryVirtual.html.twig
@@ -1,17 +1,30 @@
-{% extends 'base.html.twig' %}
+{% extends 'realitevirtuelle/base.html.twig' %}
 
 {% block title %} - Le Complexe{% endblock %}
 
 {% block body %}
 <main class="bg-primary">
-    <div class="mt-5">
-        <h3 class="text-white text-center">Catégories des jeux VR</h3>
-        <div class="text-center py-3 articles-about">
-            {% for category in categories %}
-            <a href="{{ url('categoryVR',{id:category.id}) }}" class="text-white">{{ category.nom }}</a>
-            {% endfor %}
-        </div>   
+
+    <div class="header-vr d-flex align-items-center justify-content-center">
+        <div class=" mx-auto w-100 bg-title-vr">
+            <h1 class="text-white text-center p-3 vrtitle"> Réalité Virtuelle </h1>
+            <p class="text-white text-center p-3 vrsubtitle h3 font-weight-light"> Vivre de nouvelles expériences </p>
+        </div>
     </div>
-    
+    <h2 class="mt-5 text-center text-white">Choisir une catégorie</h2>
+<div class="row divcatvr">
+    {% for category in categories %}
+    <div class="col-4 text-center mt-5 mx-auto">
+        <div class="card mb-3 bg-secondary catvr">
+            <h3 class="card-header bg-info text-light">{{ category.nom }}</h3>
+
+            <div class="card-body d-flex flex-column-reverse col-5 mx-auto">
+                <a href="{{ url('categoryVR',{id:category.id}) }}" class="card-link btn btn-info rounded border">Choisir</a>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+</div>
 </main>
 {% endblock %}
+
