--- a/templates/lasergame/lasergame.html.twig
+++ b/templates/lasergame/lasergame.html.twig
@@ -53,7 +53,7 @@
         </div>
 
         <div class="text-white text-center mt-2 pt-3 pb-3 bibo2">
-            <h2 class="text-white">Horaires du Jungle Bar</h2>
+            <h2 class="text-white">Horaires du Laser Game Arena</h2>
             <hr>
             <p>Lundi -> Fermé</p>
             
