--- a/templates/lasergame/lasergame.html.twig
+++ b/templates/lasergame/lasergame.html.twig
@@ -59,15 +59,15 @@
             
             <p>Mardi -> Fermé</p>
             
-            <p>Mercredi -> 11:45 - 14:00  /  18:30 - 21:30</p>
+            <p>Mercredi -> 14:00 / 22:00</p>
             
-            <p>Jeudi -> 11:45 - 14:00  /  18:30 - 21:30</p>
+            <p>Jeudi -> 16:00 / 22:00</p>
             
-            <p>Vendredi -> 11:45 - 14:00  /  18:30 - 21:30</p>
+            <p>Vendredi -> 16:00 / 22:00</p>
             
-            <p>Samedi -> 18:30 - 21:30</p>
+            <p>Samedi -> 14:00 / 22:00</p>
             
-            <p>Dimanche -> 18:30 - 21:30</p>
+            <p>Dimanche -> 14:00 / 22:00</p>
         </div>
     </div>
 </main>
